--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/SophusConfig.cmake.in
 install_package(
     PKG_NAME Sophus
     VERSION 0.9
-    DESCRIPTION "C++ Lie Algebra library based on Eigen."
+    DESCRIPTION "C++ implementation of Lie Groups using Eigen."
     INSTALL_HEADERS sophus/so2.hpp sophus/se2.hpp sophus/so3.hpp sophus/se3.hpp sophus/rxso3.hpp sophus/sim3.hpp
     DESTINATION ${CMAKE_INSTALL_PREFIX}/include/sophus
     INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include/sophus ${EIGEN3_INCLUDE_DIR}
